--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Hello word! Learning Git</h1>
+    <h3>Trying to make some changes to my files</h3>
   </body>
 </html>
