added new feature

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Hello word! Learning Git</h1>
     <h3>Trying to make some changes to my files</h3>
+    <p>On a new brach called new-feature</p>
   </body>
 </html>
